# Advent-of-Code

./: .gitignore  README.md
2024/: CMakeLists.txt
2024/day1/: CMakeLists.txt  day1.c
2024/day2/: CMakeLists.txt  day2.c
2024/day3/: CMakeLists.txt  day3.c
2024/day4/: CMakeLists.txt  day4.c
2024/libaoc/include/aoc/: input.h
2024/libaoc/src/: CMakeLists.txt  input.c
2025/day1/src/: main.rs
